# MarsProject

./: CMakeLists.txt  Mesh.cs  README.md
WindowsFormsApplication4/: Form1.Designer.cs  LoaderGDI.cs
WindowsFormsApplication4/Properties/: AssemblyInfo.cs
resources/: Thumbs.db
sources/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1_Designer.cs  LoaderGDI.cs  LoaderStatics.cs  Mesh.cs  Project.csproj  Rabota_s_cmake.txt
sources/Properties/: Resources.Designer.cs  Settings.Designer.cs
sources/WindowsFormsApplication4/: Camera.cs  Form1.Designer.cs  Form1.cs  LoaderGDI.cs  Mesh.cs  PixelFormat.cs  Project.csproj  Project.sln  TextureLoaderParameters.cs
sources/WindowsFormsApplication4/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
